@@ -17,3 +17,5 @@ S3method(print, sparsetsmat)
 S3method(is.virtual.array, sparsetsmat)
 S3method('[', sparsetsmat)
 S3method('[<-', sparsetsmat)
+S3method(head, sparsetsmat)
+S3method(tail, sparsetsmat)
