@@ -1,6 +1,6 @@
 Package: varray
-Version: 1.0-12
-Date: 2014-07-11
+Version: 1.0-13
+Date: 2015-02-04
 Title: Create virtual arrays
 Author: Tony Plate <tplate@acm.org>
 Maintainer: Tony Plate <tplate@acm.org>
