@@ -27,3 +27,5 @@ S3method('vstorage.mode<-', varray)
 S3method(conform, default)
 S3method(conform, list)
 S3method(conform, data.frame)
+S3method(head, varray)
+S3method(tail, varray)
